--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.2",
+    "resend": "^4.7.0",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.8",
     "zustand": "^5.0.5"
