--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-query": "^5.83.0",
     "apple-signin-auth": "^2.0.0",
+    "axios": "^1.11.0",
     "framer-motion": "^12.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
