--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.6.2",
     "resend": "^4.7.0",
+    "socket.io-client": "^4.8.1",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.8",
     "zustand": "^5.0.5"
