--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "apple-signin-auth": "^2.0.0",
     "axios": "^1.11.0",
     "framer-motion": "^12.16.0",
+    "lucide-react": "^0.542.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
